<resources>
    <string name="app_name">ROOMIE</string>
    <string name="mainActivity_WelcomeTo">Welcome to ROOMIE</string>

    <!--These are the names of the activities-->
    <string name="title_activity_after_the_first_click">AfterTheFirstClickActivity</string>
    <string name="search_roommate">룸메찾기</string>
    <string name="search_home">부동산</string>
    <string name="bulletin_board">게시판</string>
    <string name="tips">모현꿀팁</string>
    <string name="mypage">마이페이지</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- sign up page texts -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bulletin_board_title">자유게시판</string>
    <string name="signup_title">회원가입</string>
    <string name="id_here">아이디</string>
    <string name="id_duplicate_check">중복확인</string>
    <string name="pwd_here">비밀번호</string>
    <string name="pwd_again">비밀번호 확인</string>

    <!-- Menu Titles -->
    <string name="login_icon">로그인</string>
    <string name="signup_menu">가입하기</string>
    <string name="mypage_menu">마이페이지</string>

    <!-- These are Label Names -->
    <string name="this_is_our_service">원하는 서비스를 선택하세요</string>
    <string name="find_your_roommate">나의 룸메이트 찾기</string>
    <string name="where_do_you_wanna_live">살고 싶은 집</string>
    <string name="your_opinion">자유게시판</string>
    <string name="tips_label">모현 꿀팁</string>
    <string name="mypage_label">마이페이지</string>
    <string name="login_menu_label">로그인</string>
    <string name="signup_page_label">회원가입을 환영합니다</string>
    <string name="signup_finish_label">회원가입 완료</string>

    <!-- Login Page Menu Titles -->
    <string name="forgot_id_title">아이디 찾기</string>
    <string name="forgot_pwd_title">비밀번호 찾기</string>

    <!-- Signup Page Strings -->
    <string name="go_to_next_page">다음으로>></string>
    <string name="id_replicated_message">아이디가 중복되었습니다</string>
    <string name="id_usable_message">사용가능한 아이디입니다</string>
    <string name="pwd_inappropriate_message">비밀번호를 다시 입력해주세요</string>
    <string name="cannot_move_to_signup_two_message">모든 항목을 입력해주세요</string>
    <string name="id_haveto_duplicate_check_message">아이디 중복확인을 해주세요</string>
    <string name="request_user_to_click_one_more_time">\'다음으로\' 버튼을 한번 더 눌러주세요</string>
    <string name="there_is_empty_placeholder">모든 항목을 빠짐없이 기록해주세요</string>
    <string name="OK_button">확인</string>
    <string name="textview_user_name">이름</string>
    <string name="textview_user_phone">핸드폰번호</string>
    <string name="user_phone_input_hint">(\'-\'는 제외하고 숫자만 입력하세요)</string>
    <string name="textview_user_email">이메일</string>
    <string name="textview_user_gender">성별</string>
    <string name="textview_user_stuid">학번</string>
    <string name="textview_user_major">전공</string>
    <string name="signup_for_matching_insert_my_info">나의 성향을 입력하세요</string>
    <string name="signup_for_matching_insert_opposite_info">희망하는 상대방의 성향을 입력하세요</string>

    <!-- Information for Matching Service -->
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>
    <string name="insert_user_gender">1. 당신의 성별은?</string>
    <string name="insert_user_age">2. 당신의 나이는?</string>
    <string name="insert_user_grade">3. 당신의 학년은?</string>
    <string name="insert_user_personality">4. 당신은 어떤 성격인가요?\n\ \ \ \ (다중 선택)</string>
    <string name="insert_user_cleanness">5. 당신의 청소 습관은?</string>
    <string name="cleanness_pick1">매일 청소한다.</string>
    <string name="cleanness_pick2">3일에 한번 꼴로 한다.</string>
    <string name="cleanness_pick3">일주일에 한번 정도 한다.</string>
    <string name="cleanness_pick4">보름에 한번 한다.</string>
    <string name="cleanness_pick5">하고 싶을 때 한다.</string>
    <string name="insert_user_nightfood">6 당신은 야식을 자주 먹는 편인가요?</string>
    <string name="nightfood_pick1">안 먹는다.</string>
    <string name="nightfood_pick2">가끔 먹는다.</string>
    <string name="nightfood_pick3">자주 먹는다.</string>
    <string name="nightfood_pick4">매우 잘 먹는다.</string>
    <string name="personality_check1">외향적이다.</string>
    <string name="personality_check2">내향적이다.</string>
    <string name="personality_check3">꼼꼼하다.</string>
    <string name="personality_check4">인내심이 많다.</string>
    <string name="personality_check5">충동적이다.</string>
    <string name="personality_check6">진지한 편이다.</string>
    <string name="personality_check7">신중하다.</string>
    <string name="personality_check8">의지가 강한 편이다.</string>
    <string name="personality_check9">완벽주의자 같은.</string>
    <string name="personality_check10">독립심이 강하다.</string>
    <string name="personality_check11">적극적이다.</string>
    <string name="personality_check12">덤벙댄다.</string>
    <string name="insert_user_outside_activity">7. 교외 활동에 참여하고 있나요?</string>
    <string name="outside_activity_pick1">없음</string>
    <string name="outside_activity_pick2">1개</string>
    <string name="outside_activity_pick3">2개</string>
    <string name="outside_activity_pick4">3개</string>
    <string name="outside_activity_pick5">4개 이상</string>
    <string name="insert_user_max_alcohol">8. 딩신의 주량은 어느 정도인가요? \n\ \ \ \ (소주 기준)</string>
    <string name="outside_max_alcohol_pick1">0 병</string>
    <string name="outside_max_alcohol_pick2">1 병</string>
    <string name="outside_max_alcohol_pick3">2 병</string>
    <string name="outside_max_alcohol_pick4">3 병</string>
    <string name="outside_max_alcohol_pick5">4 병 이상</string>
    <string name="insert_user_alcoho_frequent">9. 당신은 술을 얼마나 자주 마시나요?</string>
    <string name="alcohol_frequent_pick1">절대 안 마신다.</string>
    <string name="alcohol_frequent_pick2">한 달에 1번 마신다.</string>
    <string name="alcohol_frequent_pick3">한 달에 2,3번 마신다.</string>
    <string name="alcohol_frequent_pick4">일주일에 1번 마신다.</string>
    <string name="alcohol_frequent_pick5">일주일에 2번 마신다.</string>
    <string name="alcohol_frequent_pick6">일주일에 3번 마신다.</string>
    <string name="alcohol_frequent_pick7">그 이상 마신다.</string>
    <string name="insert_user_smoking">10. 당신은 흡연자인가요?</string>
    <string name="yes">예, 맞습니다.</string>
    <string name="no">아니요.</string>
    <string name="insert_opposite_age">1. 희망하는 상대방 나이는?</string>
    <string name="insert_opposite_grade">2. 희망하는 상대방 학년은?</string>
    <string name="insert_opposite_cleanness">3. 상대방이 얼마나 깔끔한 성격이기를\n\ \ \ \ 바라나요?</string>
    <string name="insert_opposite_nightfood">4. 상대방이 야식을 얼마나 자주 먹기를 바라나요?</string>
    <string name="insert_opposite_outside_activity">5. 상대방이 교외 활동을 몇 개 정도 하기를 희망하나요?</string>
    <string name="insert_opposite_max_alcohol">6 희망하는 상대방 주량은?</string>
    <string name="insert_opposite_alcoho_frequent">7. 희망하는 상대방의 음주 빈도는?</string>
    <string name="insert_opposite_smoking">8. 희망하는 상대방의 흡연 여부</string>
    <string name="yes_smoking">흡연자</string>
    <string name="no_smoking">비흡연자</string>
    <string name="finish_signup_process">제출하기</string>
    <string name="insert_opposite_friend_coming">9. 상대방의 친구들이 자취방에 놀러와도 괜찮나요?</string>
    <string name="friend_coming_yes">예, 괜찮아요</string>
    <string name="friend_coming_no">아니요, 안 돼요</string>
    <string name="plz_wait">잠시만 기다려주세요.</string>
    <string name="onProcessing_msg">데이터를 처리하는 중입니다.</string>
    <string name="signup_finish_msg">회원가입이\n\n정상적으로 완료되었습니다.</string>
    <string name="button_go_to_main_page">메인으로 가기</string>
    <string name="button_go_to_login_page">로그인하러 가기</string>
    <string name="login_failed_message">로그인에 실패했습니다. 네트워크 환경을 확인해주세요.</string>
    <string name="not_ready_yet_message">아직 준비중입니다. 아이디/비밀번호로 로그인해주세요.</string>

    <!-- For Test -->
    <string name="what_is_your_id">무슨!$%@^#*()$소리일까</string>
    <string name="what_is_your_password">ㄱㅅ루ㅏ댜조펣</string>
    <string name="email_hint">example1234@email.com</string>

    <!-- -->
    <string name="login_first_message">로그인을 먼저 해야합니다.</string>
    <string name="go_to_login_page">로그인으로</string>
    <string name="default_message_forgot_id">아이디 찾기 화면 레이아웃</string>
    <string name="default_message_forgot_pwd">비밀번호 찾기 화면 레이아웃</string>
    <string name="loading_waiting_signup_finish">회원가입 처리중...</string>
    <string name="logout">로그아웃</string>
    <string name="more">더보기</string>
    <string name="less">접기</string>
    <string name="grade">학년</string>
    <string name="age">나이</string>
    <string name="activity">교외활동</string>
    <string name="drink">주량</string>
    <string name="clean">청소</string>
    <string name="yasik">야식</string>
    <string name="freqDrink">음주빈도</string>
    <string name="go_to_home_page">홈으로 가기</string>
    <string name="click_me">클릭!</string>

    <string name="name_example">민경욱 유기성 이재서</string>
    <string name="change_pwd_title">비밀번호 변경</string>
    <string name="go_to_search_roommate">룸메 찾아보기</string>
    <string name="list_record_of_myself">나의 기록</string>
    <string name="todays_fortune_cookie_label">오늘의 포춘쿠키</string>
    <string name="not_ready_yet_service_message">아직 준비중입니다.</string>
    <string name="go_to_sea_useful_tips">꿀팁 보러가기</string>


</resources>
