<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_go_to_search_roommate"
        android:title="@string/go_to_search_roommate"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_record_of_myself"
        android:title="@string/list_record_of_myself"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_change_pwd"
        android:title="@string/change_pwd_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout_in_mypage"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_home_in_mypage"
        android:title="@string/go_to_home_page"
        app:showAsAction="never" />

</menu>