<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    android:orientation="vertical"
    android:background="@color/colorBackgroundDefault"
    tools:context=".signup_actions.SignupTwoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/textview_user_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                           " />

            <EditText
                android:id="@+id/edittext_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_standard"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_user_phone"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="           "/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard" >

                <EditText
                    android:id="@+id/edittext_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:hint="@string/user_phone_input_hint"
                    android:text="" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/textview_user_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                     "/>

            <EditText
                android:id="@+id/edittext_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/email_hint"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:text="@string/textview_user_gender"
                android:layout_marginRight="100sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_user_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="" />

                <RadioGroup
                    android:id="@+id/radiogroup_gender_signup_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:weightSum="2" >

                    <RadioButton
                        android:id="@+id/rbtn_male_signup_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender_male" />

                    <RadioButton
                        android:id="@+id/rbtn_female_signup_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender_female" />

                </RadioGroup>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/textview_user_stuid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                           "/>

            <EditText
                android:id="@+id/edittext_user_stuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/textview_user_major" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                           "/>

            <EditText
                android:id="@+id/edittext_user_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_move_to_signup_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/go_to_next_page"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintHorizontal_bias="1" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>